discussion/kv_engine/141636/141636_rev51_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 09:25:00.000000000
Message: 
Uploaded patch set 51: New patch set was added with same tree, parent, and commit message as Patch Set 50.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 10:17:27.000000000
Message: 
Patch Set 51:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9847/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9847/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9847/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8435/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36834/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/358/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11570/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11843/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19431/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11418/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10498/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
